--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "daily.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "node daily.js"
+    "start": "node daily.js"
+  },
+  "engines": {
+    "node": "16.13.0"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +21,7 @@
     "discord.js": "^13.6.0",
     "discord.js-light": "^4.5.2",
     "dotenv": "^14.1.0",
+    "express": "^4.17.2",
     "mysql": "^2.18.1",
     "node-schedule": "^2.1.0"
   },
