--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start" : "node daily.js"
   },
+   "engines": {
+    "node": "16.13.0"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
