--- a/config.json
+++ b/config.json
@@ -6,12 +6,13 @@
     "supportChannelID" : "633596367666937858",
     "botID" :"932377554541752370",
     "prefix" : "/",
-    "host" : "db4free.net",
+    "host" : "localhost",
     "port" : 3306,
-    "user" : "igtalo",
-    "password" : "elPutoamo1",
-    "database" : "igtalo",
-    "userTable" : "mock_data",
+    "user" : "root",
+    "password" : "",
+    "database" : "mentopruebas",
+    "userTable" : "naw_users",
+    "membershipTable" : "naw_rcp_memberships",
     "roles" : {
         "cashBasic" : "932951256526372904",
         "cashBasicAnuncios" : "933294321262813225",
