--- a/config.json
+++ b/config.json
@@ -4,13 +4,13 @@
     "guildId" : "633596367666937856",
     "adminRole" : "932666956958531654",
     "supportChannelID" : "633596367666937858",
-    "botID" :"932377554541752370",
+    "botID" :"932376956316561438",
     "prefix" : "/",
-    "host" : "localhost",
+    "host" : "35.214.187.140",
     "port" : 3306,
-    "user" : "root",
-    "password" : "",
-    "database" : "mentopruebas",
+    "user" : "ug7nyso8gpo2g",
+    "password" : "0dhskq7qbgyu",
+    "database" : "dbptbkki8xh1wx",
     "userTable" : "naw_users",
     "membershipTable" : "naw_rcp_memberships",
     "roles" : {
