--- a/config.json
+++ b/config.json
@@ -3,7 +3,8 @@
     "clientId" : "932377554541752370",
     "guildId" : "618457893762760714",
     "adminRole" : "653271745582596096",
-    "supportChannelID" : "935193136664309851",
+    "permisosChannelID" : "935193136664309851",
+    "soporteChannelID" : "916239208832729128",
     "botID" :"932377554541752370",
     "prefix" : "/",
     "host" : "35.214.187.140",
