--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "@discordjs/rest": "^0.2.0-canary.0",
     "cron": "^1.8.2",
     "discord-api-types": "^0.26.1",
-    "discord.js": "^13.17.1",
+    "discord.js": "^14.17.3",
     "discord.js-light": "^4.5.2",
     "dotenv": "^14.1.0",
     "express": "^4.17.2",
     "mysql": "^2.18.1",
+    "node-cron": "^3.0.3",
     "node-schedule": "^2.1.0"
   },
   "devDependencies": {
