--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
   "dependencies": {
     "@discordjs/builders": "^0.11.0",
     "@discordjs/rest": "^0.2.0-canary.0",
+    "axios": "^1.8.4",
     "cron": "^1.8.2",
     "discord-api-types": "^0.26.1",
-    "discord.js": "^14.17.3",
-    "discord.js-light": "^4.5.2",
+    "discord.js": "^14.18.0",
     "dotenv": "^14.1.0",
     "express": "^4.17.2",
     "mysql": "^2.18.1",
